--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 </head>
 <body>
     <div class="container">
-
+        <div class="header">Header</div>
+        <div class="sidebar">Sidebar</div>
+        <div class="maincontent">
+            <div class="projects">
+                <div class="projectOne">1</div>
+                <div class="projectTwo">2</div>
+                <div class="projectThree">3</div>
+                <div class="projectFour">4</div>
+            </div>
+            <div class="announcments">Announcments</div>
+        </div>
     </div>
 </body>
 </html>
