--- a/index.html
+++ b/index.html
@@ -5,20 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <script src="javascript.js" defer></script>
-    <title>Grid Admin Dashboard</title>
+    <title>Dashboard</title>
 </head>
 <body>
     <div class="container">
-        <div class="header">Header</div>
-        <div class="sidebar">Sidebar</div>
+        <div class="header"></div>
+        <div class="sidebar"></div>
         <div class="maincontent">
             <div class="projects">
-                <div class="projectOne">1</div>
-                <div class="projectTwo">2</div>
-                <div class="projectThree">3</div>
-                <div class="projectFour">4</div>
+                <div class="projectOne"></div>
+                <div class="projectTwo"></div>
+                <div class="projectThree"></div>
+                <div class="projectFour"></div>
             </div>
-            <div class="announcments">Announcments</div>
+            <div class="announcments">
+               
+                <div class="javascript"></div>
+                <h3>Css Exercise</h3>
+                <div class="cssExercise"></div>
+            </div>
         </div>
     </div>
 </body>
