added input field to the header section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 <body>
     <div class="container">
         <div class="header"></div>
-        <div class="sidebar"></div>
+        <div class="sidebar">
+            <input type="text" id="Search" placeholder="Search..." name="search">
+            <img src="./magnify.svg" alt="magnify">
+            <div class="sidebarContent">
+                Hello MotherFucker
+            </div>
+        </div>
         <div class="maincontent">
             <div class="projects">
                 <div class="projectOne"></div>
