added odin sign to the header section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             <input type="text" id="Search" placeholder="Search..." name="search">
             <img src="./magnify.svg" alt="magnify">
             <div class="sidebarContent">
-                Hello MotherFucker
+               <img src="./bell-ring.svg" alt="">
+                <img src="./Odin-One.png" alt="Odin" id="Odin">
+                <h1>Haileab</h1>
             </div>
         </div>
         <div class="maincontent">
