--- a/index.html
+++ b/index.html
@@ -21,15 +21,24 @@
         </div>
         <div class="maincontent">
             <div class="projects">
-                <div class="projectOne"></div>
-                <div class="projectTwo"></div>
-                <div class="projectThree"></div>
-                <div class="projectFour"></div>
+                <div class="projectOne">
+                    <img src="./Calculator.png"  class="Main" alt="Calculator">
+                        <img src="./github.svg" alt="github" class="github">
+                </div>
+                <div class="projectTwo">
+                    <img src="./SignUp_Form.png"  class="Main" alt="SignUp_Form">
+                </div>
+                <div class="projectThree">
+                    <img src="./Etch-Sketch.png" class="Main" alt="Etch-Sketch">
+                </div>
+                <div class="projectFour">
+                    <img src="./Rock-Paper-Scissor.png" class="Main" alt="Rock-Paper-Scissor">
+                </div>
             </div>
             <div class="announcments">
                
                 <div class="javascript"></div>
-                <h3>Css Exercise</h3>
+               
                 <div class="cssExercise"></div>
             </div>
         </div>
