added github icon and eye icon

--- a/index.html
+++ b/index.html
@@ -23,16 +23,48 @@
             <div class="projects">
                 <div class="projectOne">
                     <img src="./Calculator.png"  class="Main" alt="Calculator">
+                    <div class="icons">
+                       <a href="https://github.com/HaileabWolde/ODIN-CALCULATOR" target="_blank" rel="noopener noreferrer">
                         <img src="./github.svg" alt="github" class="github">
+                       </a>
+                       <a href="https://haileabwolde.github.io/ODIN-CALCULATOR/" target="_blank" rel="noopener noreferrer">
+                        <img src="./eye-solid.svg" alt="eye" class="eye">
+                       </a>
+                    </div>
+                        
                 </div>
                 <div class="projectTwo">
                     <img src="./SignUp_Form.png"  class="Main" alt="SignUp_Form">
+                    <div class="icons">
+                        <a href="https://github.com/HaileabWolde/SIGNUP_FORM" target="_blank" rel="noopener noreferrer">
+                         <img src="./github.svg" alt="github" class="github">
+                        </a>
+                        <a href="https://haileabwolde.github.io/SIGNUP_FORM/" target="_blank" rel="noopener noreferrer">
+                         <img src="./eye-solid.svg" alt="eye" class="eye">
+                        </a>
+                     </div>
                 </div>
                 <div class="projectThree">
                     <img src="./Etch-Sketch.png" class="Main" alt="Etch-Sketch">
+                    <div class="icons">
+                        <a href="https://github.com/HaileabWolde/Etch-a-Sketch" target="_blank" rel="noopener noreferrer">
+                         <img src="./github.svg" alt="github" class="github">
+                        </a>
+                        <a href="https://haileabwolde.github.io/Etch-a-Sketch/" target="_blank" rel="noopener noreferrer">
+                         <img src="./eye-solid.svg" alt="eye" class="eye">
+                        </a>
+                     </div>
                 </div>
                 <div class="projectFour">
                     <img src="./Rock-Paper-Scissor.png" class="Main" alt="Rock-Paper-Scissor">
+                    <div class="icons">
+                        <a href="https://github.com/HaileabWolde/Rock_Paper_Scissor_Game" target="_blank" rel="noopener noreferrer">
+                         <img src="./github.svg" alt="github" class="github">
+                        </a>
+                        <a href="https://haileabwolde.github.io/Rock_Paper_Scissor_Game/" target="_blank" rel="noopener noreferrer">
+                         <img src="./eye-solid.svg" alt="eye" class="eye">
+                        </a>
+                     </div>
                 </div>
             </div>
             <div class="announcments">
